--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>身高:{{height}} 體重:{{weight}} BMI:{{bmi}}</h1>
-    <a href="index.html">回首頁</a>
+    <a href="/">回首頁</a>
 </body>
 </html>
