--- a/templates/index.html
+++ b/templates/index.html
@@ -7,57 +7,39 @@
     <style>
         body{
             text-align: center;
-            background-color: rgb(26, 112, 98);
+            background-color: rgba(92, 136, 153, 0.493);
         }
-
-        .price{
-            color:red;
+        table{
+            width:80%;
+            margin:0 auto;
         }
-
-        .title{
-            background:orange;
-            color: white;
-            padding: 6px;
-        }
-
-        img{
-            border: 1px solid black;
-            width: 300px;
-        }
-
-        form{
-            color: black
+        
+        th{
+            background: wheat;
         }
     </style>
 </head>
 <body>
-    <h1>{{name}}歡迎登入</h1>
-    <p>目前時間:{{now}}</p>
-
-    <form action="/bmi">
-        <label for="">身高</label>
-        <input type="number" name="height">
-        <label for="">體重</label>
-        <input type="number" name="weight">
-        <button type="submit">計算</button>
-    </form>
-    <p>BMI:{{bmi}}</p>
-
-    {% if books %}
-    {% for book in books %}
-    <h1 class="title">{{book.name}}</h1>
-    <h3 class="price">{{book.price}}</h3>
-    <img src="{{book.image_url}}" alt="">
-    <!-- <li>{{book.name}} - {{book.price}} - {{book.image_url}}</li> -->
-    {% endfor %}
-    {% else %}
-    <h1 style="color: white;">販售完畢，目前無書籍！</h1>
-    {% endif %}
-
-
-
-    
+    <h1>細懸浮微粒資料 ( PM2.5 )</h1>
+    <table border="1">
+        <thead>
+            <tr>
+                {% for col in columns %}
+                <th>{{col}}</th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for row in datas %}
+            <tr>
+                {% for data in row %}
+                <td>{{data}}</td>
+                {% endfor %}
+            {{data}}
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
     <br>
-    <a href="/pm25-data">pm25-data</a>
 </body>
 </html>
