完成首頁數據繪製

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,18 @@
 
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.6.0/dist/echarts.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
+    <style>
+      #main{
+        text-align: center;
+        margin: 0 auto;
+      }
+    </style>
 </head>
 <body>
     <h1>細懸浮微粒資料 ( PM2.5 )</h1>
     <h3>最新更新時間:{{datas[0][4]}}</h3>
 
-    <div id="main" style="width: 600px;height:400px;"></div>
+    <div id="main" style="width: 800px;height:400px;"></div>
 
     <a class="btn-update" href="/update-db">更新資料庫</a>
 
@@ -28,10 +33,7 @@
         </select>
         <button type="submit">查詢</button>
     </form>
-    <div id="chart-data" data-labels="{{x_data | tojson | safe }}" data-values="{{y_data | tojson | safe}}">
-    </div>
-    
-
+    <div id="chart-data" data-labels='{{ x_data | tojson | safe }}' data-values='{{ y_data | tojson | safe}}'></div>
     <h2 style="text-align: left;margin-left: 64px;color:rgb(54,95,6)">選擇縣市:{{selected_county}}</h2>
     <table border="1">
         <thead>
@@ -59,10 +61,6 @@
         const chartData = document.querySelector("#chart-data");
         const labels = JSON.parse(chartData.dataset.labels);
         const values = JSON.parse(chartData.dataset.values);
-        // 轉換不成功，上次上課到這
-        // const labels = chartData.dataset.labels;
-        // const values = chartData.dataset.values;
-
 
         console.log(chartData,labels,values);
         
@@ -74,11 +72,16 @@
           },
           tooltip: {},
           legend: {
-            data: ['销量']
+            data: ['PM25']
           },
           xAxis: {
             data: labels
           },
+          dataZoom: [{
+            type: 'slider',
+            start: 0,
+            end: 100
+          }],
           yAxis: {},
           series: [
             {
